tests/compile_fail/second_of_two_required.rs
use named::named;

#[named(defaults(a = false))]
fn or(a: bool, b: bool) -> bool {
    a || b
}

fn main() {
    let _ = or!(a = true);
}
